Подключил SQLite для функции

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,6 @@ set(MAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 17) #версия с++
 set(CMAKE_CXX_STANDARD_REQUIRED ON) #значит обязательно использовать указанный стандарт
 
-add_executable(${PrName} main.cpp FileManager.cpp FileManagerUI.cpp FileManagerBK.cpp)
+add_executable(${PrName} main.cpp FileManager.cpp FileManagerUI.cpp FileManagerBK.cpp sqlite3.c)
 
 target_include_directories(${PrName} PRIVATE .)
